added source link

--- a/Bang Bang Sauce.html
+++ b/Bang Bang Sauce.html
@@ -21,6 +21,8 @@ This bang bang sauce is a sweet and spicy mayonnaise-based sauce that is good on
 <br>
 1.Stir together mayonnaise, chili sauce, Sriracha, and rice vinegar in a small bowl until smooth.
 <br>
+<a href="https://www.allrecipes.com/search?q=bang+bang+sauce">Source</a>
+<br>
 <a href="index.html">Home page</a>
 </body>
 </html>
