--- a/Copycat chipotle chicken.html
+++ b/Copycat chipotle chicken.html
@@ -47,6 +47,9 @@ If you do not have an indoor electric grill, wrap a paver brick in aluminum foil
 Soak chile peppers in chicken broth instead of water, if desired.
 
 <br>
+
+<a href="https://www.allrecipes.com/search?q=copycat+chipotle+chicken">Source</a>
+<br>
 <a href="index.html">Homepage</a>
 </body>
 </html>
