--- a/Homemade Smashed Burgers.html
+++ b/Homemade Smashed Burgers.html
@@ -39,6 +39,8 @@ I buy American cheese freshly-sliced from the deli, but individually-wrapped sli
 <br>
 </p> 
 <br>
+<a href="https://www.allrecipes.com/search?q=homemade+smashed+burger">source</a>
+<br>
 <a href="index.html">Homepage</a>
 </body>
 </html>
